--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ Assets/PolygonParticleFX/
 Assets/PolygonZombies/
 Assets/Samples/
 Assets/Gizmos/
+Assets/net.fabrejean/
+Assets/PlayMaker PathFinding/
+PlayMaker/Ecosystem/
